@@ -44,24 +44,35 @@ android {
         resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 
+    lintOptions{
+        abortOnError false
+    }
+
+    testOptions {
+        unitTests.all {
+            // All the usual Gradle options.
+            jvmArgs '-XX:MaxPermSize=256m'
+        }
+        unitTests.returnDefaultValues = true
+    }
+
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:26.1.0'
     //dependencies for the free version
-
     compile 'com.google.android.gms:play-services-ads:10.0.0'
-
     //compile project(':backend')
     //compile project(':backendz')
-    compile project(':androidjokedisplay')
+    compile project(path: ':javajoke')
+    compile project(path: ':androidjokedisplay')
+    //compile project(':javajoke')
     compile project(path: ':backend', configuration: 'android-endpoints')
-
     compile 'com.google.http-client:google-http-client-android:1.23.0'
     compile 'com.google.api-client:google-api-client:1.23.0'
+    compile 'com.android.support:design:26.1.0'
 }
